--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -5,4 +5,13 @@ edition = "2021"
 
 [dependencies]
 entity = { path = "../entity" }
-sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "1.0.0-rc.5", features = [
+    "sqlx-postgres",
+    "runtime-tokio-rustls",
+    "macros",
+] }
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+http = "1.1.0"
+error = { path = "../error" }
+lazy_static = "1.5.0"
