--- a/error/Cargo.toml
+++ b/error/Cargo.toml
@@ -10,3 +10,6 @@ sea-orm = { version = "1.0.0-rc.5", features = [
     "macros",
 ] }
 reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.127"
+regex = "1.10.6"
