--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,13 +3,19 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "server"
+path = "src/lib.rs"
+
 [dependencies]
+error = { path = "../error" }
+entity = { path = "../entity" }
 service = { path = "../service" }
-entity = {path = "../entity"}
-axum = "0.7.5"
+
 log = "0.4.22"
-serde = { version = "1.0", features = ["derive"] }
+axum = "0.7.5"
 serde_json = "1.0.127"
+serde = { version = "1.0", features = ["derive"] }
 sea-orm = { version = "1.0.0-rc.5", features = [
     "sqlx-postgres",
     "runtime-tokio-rustls",
