--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -8,6 +8,7 @@ name = "entity"
 path = "src/lib.rs"
 
 [dependencies]
+serde_json = "1.0.127"
 serde = { version = "1", features = ["derive"] }
 sea-orm = { version = "1.0.0-rc.5", features = [
     "sqlx-postgres",
